@@ -23,6 +23,8 @@ Version SVN HEAD (?)
     source code.
   * Script Editor: Show a question dialog to the user when the editor is
     to be closed and the script changes have not been applied yet.
+  * Script Editor: Added status bar at the bottom of the script editor
+    window showing the amount (if any) of errors and warnings.
 
 Version 1.0.0 (2015-07-17)
 
